# DangerousSnake

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  bindings.f90  constants.f90  game.f90  main.f90  makefile  snake.f90
pdsrc/: UNLICENSE.txt  makefile
src/: CMakeLists.txt  util.f90
src/dangeroussnake/: CMakeLists.txt  constants.f90  game.f90  main.f90  snake.f90
src/pdsrc/: CMakeLists.txt  README.md  macros.c  ncurses.f90
